Fix parsing BPMN xml + fix sizing
Remove the 'pre' tag that is used for XML rendering
Fix sizing issue, where diagram goes out of bounds of its container

[all]

ERM 24268

--- a/resources/styles/cognitiveprocessdesigner.css
+++ b/resources/styles/cognitiveprocessdesigner.css
@@ -90,10 +90,15 @@
 	content: '\f426';
 }
 
-.content,.content>div {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
+.content {
+        width: 100%;
+        height:85% !important;
+        overflow: hidden;
+}
+.content>div {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
 }
 
 .content>.screen {
@@ -573,7 +578,7 @@ textarea.error-log:hover {
 }
 
 #js-drop-zone, .cpd-js-drop-zone {
-	height: 400px;
+	height: 520px;
 	border: 1px solid #cecece;
 	margin-bottom: 55px;
 	background-color: white;
